--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     cloudinary.openUploadWidget({ cloud_name: 'mesh', upload_preset: 'bjqltbqn'}, 
       function(error, result) { console.log(error, result);
 			
-			alert(result[0].url);
+			alert("aa"+" "+result[0].url);
 		
 	  });
 
