--- a/index.html
+++ b/index.html
@@ -255,6 +255,11 @@ function geolocate() {
       <input type="text" class="form-control" id="merchant" placeholder="Zip Cars">
       
     </div><br/><br/>
+	<div class="input-group">
+      <div class="input-group-addon">Merchant contact</div>
+      <input type="text" class="form-control" id="contact" placeholder="9538230066">
+      
+    </div><br/><br/>
 		<div class="input-group">
       <div class="input-group-addon">Delivery Radius(in Kms, Leave blank for pickup only)</div>
       <input type="text" class="form-control" id="distance" placeholder="5 or 0 if delivery everywhere">
