--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ function geolocate() {
                         <ul class="dropdown-menu">
                             <li><a href="#">Cars</a></li>
                             <li><a href="#">Motorbikes</a></li>
-                            <li><a href="#">Scoooters</a></li>
+                            <li><a href="#">Scooters</a></li>
                             <li><a href="#">Bicycles</a></li>
                            
                             <li><a href="#">Furniture</a></li>
